--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  heroicons: ^0.8.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +57,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/event_1.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -78,15 +76,18 @@ flutter:
     - family: Inter
       fonts:
         - asset: assets/fonts/Inter-Regular.ttf
+          style: normal
         - asset: assets/fonts/Inter-ExtraBold.ttf
           weight: 900
         - asset: assets/fonts/Inter-Bold.ttf
-          weight: 700
+          weight: 800
         - asset: assets/fonts/Inter-ExtraLight.ttf
           weight: 100
         - asset: assets/fonts/Inter-Light.ttf
           weight: 200
         - asset: assets/fonts/Inter-SemiBold.ttf
+          weight: 700
+        - asset: assets/fonts/Inter-Medium.ttf
           weight: 500
   #   - family: Trajan Pro
   #     fonts:
