--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  connectivity_plus: ^3.0.3
   flutter:
     sdk: flutter
 
   heroicons: ^0.8.0
+  http: ^0.13.5
   intl: ^0.18.0
 
 dev_dependencies:
